--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10956,16 +10956,16 @@ a.text-dark:focus {
   margin: 5px;
 }
 
-.list-line__books {
+.list-line__restaurants {
   display: flex;
   flex-direction: column;
 }
 
-.list-line__books__title {
+.list-line__restaurants__title {
   font-weight: bold;
 }
 
-.list-line__books__author {
+.list-line__restaurants__menu {
   color: grey;
   font-size: 80%;
   font-style: italic;
